Correzione dei Code Smells finali